--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,10 @@
     <json.version>1.9.13</json.version>
     <jackson.version>2.5.0</jackson.version>
     <mysql.version>5.1.38</mysql.version>
-    <c3p0.version>0.9.1.2</c3p0.version>
     <log4j.version>1.2.17</log4j.version>
     <fileupload.version>1.3.1</fileupload.version>
     <lombok.version>1.16.10</lombok.version>
+    <c3p0Version>0.9.1.2</c3p0Version>
   </properties>
 
   <dependencies>
@@ -39,6 +39,13 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+
+    <!-- 数据库连接池-->
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>${c3p0Version}</version>
     </dependency>
 
     <!-- Spring -->
@@ -112,9 +119,9 @@
 
     <!--数据库连接池-->
     <dependency>
-      <groupId>c3p0</groupId>
-      <artifactId>c3p0</artifactId>
-      <version>${c3p0.version}</version>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-c3p0</artifactId>
+      <version>${hibernate.version}</version>
     </dependency>
 
     <!--json数据 使得springmvc可以返回json值-->
